# Multitool

./: .gitignore  pyproject.toml  requerimientos.txt
multitool_v2/: prueba.py
multitool_v2/config/: config.ini  set_configs.py
multitool_v2/core/: app.py  main_comand.ps1
multitool_v2/data/: archivos_predeterminado.txt  carga_dat.py
multitool_v2/ui/assets/image_factory/: factorys.py
multitool_v2/ui/theme/: theme_default.py
multitool_v2/ui/views/: main_windows.py
multitool_v2/ui/widgets/: frame_notifications.py  frame_paths.py  label_image_notification.py  label_notifications.py  labels_paths.py
